This is the C SDK for EdgeX device services.

Changes for 2.2.0 "Kamakura":

- Implement loading secrets from file
- Use Alpine 3.15 for container builds
- Array elements in readings are no longer stringified
  - to re-enable stringification, add the '-legacyv2' flag when
    running scripts/build.sh
- Retry attempts to retrieve client endpoints from registry
- Add serviceName field to version, ping, config, metrics APIs

Changes for 2.1.0 "Jakarta":

- Fix event push via MQTT
- Fix race condition on device deletion with autoevents

Changes for 2.0.1:

- Initial support for Object typed Readings (GET operations only)
- Fix segfault on startup when using MQTT for MessageQueue
- Support EDGEX_STARTUP_DURATION, EDGEX_STARTUP_INTERVAL
- Support EDGEX_USE_REGISTRY
- Support credential loading from Hashicorp Vault

Changes for 2.0.0 "Ireland":

- v2 API update: reconfigure callback no longer mandatory
- v2 API update: new callbacks for parsing attributes and protocol properties
- Ports for EdgeX microservices are re-assigned, eg device services move from 499xx to 599xx.
- Provision Watchers may include AutoEvents to be added on discovered devices.
- Support event transmission by mqtt or redis streams rather than rest
- Device definitions for upload no longer supported in configuration. Instead files may be read from a specified directory (as for profiles)
  - These may be in .json files or the previous .toml format
- Added helper functions for setting up the callback functions structure. This is now the preferred way of doing so.
- REST API moves to v2. v1 interfaces are no longer available.
- v1 C API is no longer supported.
- Add queryparams for PUT operations (Changes signature of put handler function)
- Add MaxRequestSize configuration for limiting inbound http data transfers
- EdgeX resource type names are now CamelCase as per Go services