@@ -17,6 +17,6 @@ void edgex_mqtt_config_defaults (iot_data_t *allconf);
 
 JSON_Value *edgex_mqtt_config_json (const iot_data_t *allconf);
 
-edgex_data_client_t *edgex_data_client_new_mqtt (const iot_data_t *allconf, iot_logger_t *lc, const devsdk_timeout *tm, iot_threadpool_t *queue);
+edgex_data_client_t *edgex_data_client_new_mqtt (devsdk_service_t *svc, const devsdk_timeout *tm, iot_threadpool_t *queue);
 
 #endif
